# SwitchAsset

./: .env  .env.example  .gitignore  Cargo.toml  README.md  diesel.toml  hardhat.config.js  package-lock.json  package.json  project_requirements.txt
contracts/: Errors.sol  ISwitch.sol  SwitchAssets.sol
ignition/deployments/chain-84532/: deployed_addresses.json  journal.jsonl
ignition/deployments/chain-84532/artifacts/: SwitchAssetsModule#SwitchAssets.dbg.json  SwitchAssetsModule#SwitchAssets.json
ignition/modules/: SwitchAsset.js
migrations/2025-08-16-215345_create_assets/: down.sql  up.sql
migrations/2025-08-20-174004_create_tables/: down.sql  up.sql
script/: deploy.js
src/: .env  app_route.rs  app_state.rs  contract_call.rs  contract_calls.rs  events.rs  main.rs  models.rs  routes.rs  schema.rs  swagger.rs  utility.rs
src/config/: app_router.rs
src/contract_calls/: get_all_contract_assets.rs  get_asset.rs  get_my_assets.rs  mod.rs  register_asset.rs  transfer_asset.rs
src/files/: analytics.json  summary.md
src/handlers/: analytics.rs  assets.rs  mod.rs  search.rs  transfer.rs
static/: index.html
test/: SwitcAssetTests.sol
